Added bridge for PunBB.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1121 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -158,4 +158,5 @@ New javascript driven config page  - 20th July, Nibbler
 Added overview over used colors in style sheets - 22 July 2004, GauGau
 Changed help icon availability for all users vs. admin only - 22 July 2004, GauGau
 Added option 'user can change email address in profile' - 22 July 2004, GauGau
+Added bridge for PunBB - 25 July 2004, Nibbler
 
