--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -159,4 +159,5 @@ Added overview over used colors in style sheets - 22 July 2004, GauGau
 Changed help icon availability for all users vs. admin only - 22 July 2004, GauGau
 Added option 'user can change email address in profile' - 22 July 2004, GauGau
 Added bridge for PunBB - 25 July 2004, Nibbler
-
+Added option to sort categories alphabetically - 09 August 2004, GauGau
+Added brute force attack protection - 09 August 2004, GauGau
