Added display number of uploaded pictures in the profile mod (user contribution)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1214 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -161,3 +161,4 @@ Added option 'user can change email address in profile' - 22 July 2004, GauGau
 Added bridge for PunBB - 25 July 2004, Nibbler
 Added option to sort categories alphabetically - 09 August 2004, GauGau
 Added brute force attack protection - 09 August 2004, GauGau
+Added display number of uploaded pictures in the profile mod (user contribution) - 10 August 2004, GauGau
