Added clickable keyword search and keyword manager
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1219 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -163,3 +163,5 @@ Added option to sort categories alphabetically - 09 August 2004, GauGau
 Added brute force attack protection - 09 August 2004, GauGau
 Added display number of uploaded pictures in the profile mod (user contribution) - 10 August 2004, GauGau
 Fixed animated smilies stoppping to move when being clicked on (user contribution) - 10 August 2004, GauGau
+Added option to select all checkboxes when editing files in an album - 12 August 2004, GauGau
+Added clickable keyword search and keyword manager - 12 August 2004, GauGau
