--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -172,3 +172,4 @@ Added facility to disable config settings that are irrelevent with bridged insta
 Added alt tags to some images for xhtml compliance - 31 August 2004, GauGau
 Changed bbcode help to display help icon instad of full text - 31 August 2004, GauGau
 Added option to sort categories by name instead of position - 31 August 2004, GauGau
+Added section to album properties where the admin can reset views, votes and files - 03 August 2004, GauGau
