added catalan and turkish languages (user contributions)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1348 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -173,3 +173,5 @@ Added alt tags to some images for xhtml compliance - 31 August 2004, GauGau
 Changed bbcode help to display help icon instad of full text - 31 August 2004, GauGau
 Added option to sort categories by name instead of position - 31 August 2004, GauGau
 Added section to album properties where the admin can reset views, votes and files - 03 August 2004, GauGau
+Added Turkish language file (user contrib) - 05 September 2004, GauGau
+Added Catalan language file (user contrib) - 05 September 2004, GauGau
