added estonian and uighur language support
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1370 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -175,3 +175,5 @@ Added option to sort categories by name instead of position - 31 August 2004, Ga
 Added section to album properties where the admin can reset views, votes and files - 03 August 2004, GauGau
 Added Turkish language file (user contrib) - 05 September 2004, GauGau
 Added Catalan language file (user contrib) - 05 September 2004, GauGau
+Added Uighur language file (user contrib) - 10 September 2004, GauGau
+Added Estonian language file (user contrib) - 10 September 2004, GauGau
