--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -121,3 +121,5 @@ Added PunBB integration support - 9th August, Nibbler
 Added version check routine for easier upgrades - 16 August 2004, GauGau
 Added Turkish language file (user contrib) - 05 September 2004, GauGau
 Added Catalan language file (user contrib) - 05 September 2004, GauGau
+Added Uighur language file (user contrib) - 10 September 2004, GauGau
+Added Estonian language file (user contrib) - 10 September 2004, GauGau
