--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -177,3 +177,4 @@ Added Turkish language file (user contrib) - 05 September 2004, GauGau
 Added Catalan language file (user contrib) - 05 September 2004, GauGau
 Added Uighur language file (user contrib) - 10 September 2004, GauGau
 Added Estonian language file (user contrib) - 10 September 2004, GauGau
+Added bridge manager for easier BBS integration - 12 September 2004, GauGau
