added kurdish language (user contribution) updated uighur language (fixing typos, user contrib)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1397 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -178,3 +178,4 @@ Added Catalan language file (user contrib) - 05 September 2004, GauGau
 Added Uighur language file (user contrib) - 10 September 2004, GauGau
 Added Estonian language file (user contrib) - 10 September 2004, GauGau
 Added bridge manager for easier BBS integration - 12 September 2004, GauGau
+Added Kurdish language file (user contrib) - 15 September 2004, GauGau
