--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -123,3 +123,4 @@ Added Turkish language file (user contrib) - 05 September 2004, GauGau
 Added Catalan language file (user contrib) - 05 September 2004, GauGau
 Added Uighur language file (user contrib) - 10 September 2004, GauGau
 Added Estonian language file (user contrib) - 10 September 2004, GauGau
+Added Kurdish language file (user contrib) - 15 September 2004, GauGau
