--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -179,3 +179,4 @@ Added Uighur language file (user contrib) - 10 September 2004, GauGau
 Added Estonian language file (user contrib) - 10 September 2004, GauGau
 Added bridge manager for easier BBS integration - 12 September 2004, GauGau
 Added Kurdish language file (user contrib) - 15 September 2004, GauGau
+Admin.php name changed to mode.php - 25 September 2004, Casper
