Added check/uncheck all fields in "review comments"
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1438 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -181,3 +181,4 @@ Added bridge manager for easier BBS integration - 12 September 2004, GauGau
 Added Kurdish language file (user contrib) - 15 September 2004, GauGau
 Admin.php name changed to mode.php - 25 September 2004, Casper
 Config.php renamed admin.php - 25 September 2004, Casper
+Added check/uncheck all fields in reviewcom.php - 27 September 2004, GauGau
