Added GIF support back into Coppermine.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1447 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -183,3 +183,4 @@ Admin.php name changed to mode.php - 25 September 2004, Casper
 Config.php renamed admin.php - 25 September 2004, Casper
 Added check/uncheck all fields in reviewcom.php - 27 September 2004, GauGau
 Added link to edit files, parent category and thumbnail view in album properties - 27 September 2004, GauGau
+Added GIF support for GD back into Coppermine - 27 September 2004, kegobeer
