Added overhauled Russian translation (user contribution)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1461 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -124,3 +124,5 @@ Added Catalan language file (user contrib) - 05 September 2004, GauGau
 Added Uighur language file (user contrib) - 10 September 2004, GauGau
 Added Estonian language file (user contrib) - 10 September 2004, GauGau
 Added Kurdish language file (user contrib) - 15 September 2004, GauGau
+Fixed typos in French language file (user contribution) - 29 September 2004, GauGau
+Added overhauled Russian translation (user contribution) - 29 September 2004, GauGau
