Added mulitiple user selection and deleting
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1476 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -186,3 +186,4 @@ Added link to edit files, parent category and thumbnail view in album properties
 Added GIF support for GD back into Coppermine - 27 September 2004, kegobeer
 Fixed typos in French language file (user contribution) - 29 September 2004, GauGau
 Added overhauled Russian translation (user contribution) - 29 September 2004, GauGau
+Added mulitiple user selection and deleting - 04 October 2004, GauGau
