Added "check/uncheck all" option in groupmanager
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1478 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -188,3 +188,4 @@ Fixed typos in French language file (user contribution) - 29 September 2004, Gau
 Added overhauled Russian translation (user contribution) - 29 September 2004, GauGau
 Added mulitiple user selection and deleting - 04 October 2004, GauGau
 Added "reset group names to default" option in group manager - 04 October 2004, GauGau
+Added "check/uncheck all" option in groupmanager - 05 October 2004, GauGau
