--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -189,3 +189,4 @@ Added overhauled Russian translation (user contribution) - 29 September 2004, Ga
 Added mulitiple user selection and deleting - 04 October 2004, GauGau
 Added "reset group names to default" option in group manager - 04 October 2004, GauGau
 Added "check/uncheck all" option in groupmanager - 05 October 2004, GauGau
+Added scripts for recording detailed statistics for votes and hits - 05 October 2004, Aditya
