Added provisional support for integration with phpbb 2.2
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1515 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -193,3 +193,4 @@ Added scripts for recording detailed statistics for votes and hits - 05 October 
 Added optional browsing through batch-added files - 06 October 2004, GauGau
 Added sub-section for logging and statistics in coppermine config and the docs to reflect the additional log features introduced lately - 06 October 2004, GauGau
 Added "check/uncheck all" option in exif manager - 07 October 2004, GauGau
+Added provisinal phpbb 2.2 integration support - 07 October, Nibbler
