Added batch-activation/deactivation/password-reset in user manager
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1520 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -194,3 +194,4 @@ Added optional browsing through batch-added files - 06 October 2004, GauGau
 Added sub-section for logging and statistics in coppermine config and the docs to reflect the additional log features introduced lately - 06 October 2004, GauGau
 Added "check/uncheck all" option in exif manager - 07 October 2004, GauGau
 Added provisinal phpbb 2.2 integration support - 07 October, Nibbler
+Added batch-activation/deactivation/password-reset in user manager - 10 October 2004, GauGau
