changed edit directory check to create at 777
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1535 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -196,3 +196,4 @@ Added "check/uncheck all" option in exif manager - 07 October 2004, GauGau
 Added provisinal phpbb 2.2 integration support - 07 October, Nibbler
 Added batch-activation/deactivation/password-reset in user manager - 10 October 2004, GauGau
 Added "change primary group membership" for multiple users at once in user management - 13 October 2004, GauGau
+Changed edit dirctory creation from 666 to 777 in picmgmt.inc.php - 22 October - Casper
