Changed pop-ups to class "tableb" so help can be read when body background dark.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1598 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -204,3 +204,4 @@ Added custom header and footer include option - 02 November 2004, GauGau
 Added slovak translation (user contribution) - 06 November 2004, GauGau
 Changed options for "Image view" and "Comment settings" to be different sections - 08 November 2004, GauGau
 Added option to sort comments ascending or descending - 08 November 2004, GauGau
+Changed help pop-up to so can be read when body dark colour - 09 November 2004, Casper
