--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -205,3 +205,4 @@ Added slovak translation (user contribution) - 06 November 2004, GauGau
 Changed options for "Image view" and "Comment settings" to be different sections - 08 November 2004, GauGau
 Added option to sort comments ascending or descending - 08 November 2004, GauGau
 Changed help pop-up to so can be read when body dark colour - 09 November 2004, Casper
+Removed admin/user mode toggle for non-admins - 16 November 2004, GauGau
