--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -206,3 +206,4 @@ Changed options for "Image view" and "Comment settings" to be different sections
 Added option to sort comments ascending or descending - 08 November 2004, GauGau
 Changed help pop-up to so can be read when body dark colour - 09 November 2004, Casper
 Removed admin/user mode toggle for non-admins - 16 November 2004, GauGau
+Added IPB 2.0 bridge file (user contribution) - 19 November 2004, GauGau
