--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -208,3 +208,4 @@ Changed help pop-up to so can be read when body dark colour - 09 November 2004, 
 Removed admin/user mode toggle for non-admins - 16 November 2004, GauGau
 Added IPB 2.0 bridge file (user contribution) - 19 November 2004, GauGau
 Added code to check/add trailing slash to ecards_more_pic_target in config.php - 26 November 2004, kegobeer
+Removed dotted line from css class "clickable_option" - 01 December 2004, GauGau
