--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -193,7 +193,7 @@ Added scripts for recording detailed statistics for votes and hits - 05 October 
 Added optional browsing through batch-added files - 06 October 2004, GauGau
 Added sub-section for logging and statistics in coppermine config and the docs to reflect the additional log features introduced lately - 06 October 2004, GauGau
 Added "check/uncheck all" option in exif manager - 07 October 2004, GauGau
-Added provisinal phpbb 2.2 integration support - 07 October, Nibbler
+Added provisional phpbb 2.2 integration support - 07 October, Nibbler
 Added batch-activation/deactivation/password-reset in user manager - 10 October 2004, GauGau
 Added "change primary group membership" for multiple users at once in user management - 13 October 2004, GauGau
 Changed edit dirctory creation from 666 to 777 in picmgmt.inc.php - 22 October 2004, Casper
@@ -208,4 +208,7 @@ Changed help pop-up to so can be read when body dark colour - 09 November 2004, 
 Removed admin/user mode toggle for non-admins - 16 November 2004, GauGau
 Added IPB 2.0 bridge file (user contribution) - 19 November 2004, GauGau
 Added code to check/add trailing slash to ecards_more_pic_target in config.php - 26 November 2004, kegobeer
+Added file renaming option - 28 November 2004, Nibbler
+Added ability for users to edit their pics after upload - 28 November 2004, Nibbler
 Removed dotted line from css class "clickable_option" - 01 December 2004, GauGau
+Added support for PunBB 1.2 - 01 December 2004, Nibbler
