Added advanced search
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1694 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -212,3 +212,4 @@ Added file renaming option - 28 November 2004, Nibbler
 Added ability for users to edit their pics after upload - 28 November 2004, Nibbler
 Removed dotted line from css class "clickable_option" - 01 December 2004, GauGau
 Added support for PunBB 1.2 - 01 December 2004, Nibbler
+Added advanced searching - 8 December 2004, Nibbler
