--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -213,3 +213,4 @@ Added ability for users to edit their pics after upload - 28 November 2004, Nibb
 Removed dotted line from css class "clickable_option" - 01 December 2004, GauGau
 Added support for PunBB 1.2 - 01 December 2004, Nibbler
 Added advanced searching - 8 December 2004, Nibbler
+Added server relocation script - 10 December 2004, kegobeer
