--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -216,3 +216,4 @@ Added advanced searching - 8 December 2004, Nibbler
 Added server relocation script - 10 December 2004, kegobeer
 Changed coppermine version from cpg1.4.0 alpha to cpg1.4.1 beta - 12 December 2004, GauGau
 Added admin option "Allow unlogged users (guest or anonymous) access" - 12 December 2004, GauGau
+Added Basque language (user contribution) - 14 December 2004, GauGau
