--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -127,3 +127,4 @@ Added Kurdish language file (user contrib) - 15 September 2004, GauGau
 Fixed typos in French language file (user contribution) - 29 September 2004, GauGau
 Added overhauled Russian translation (user contribution) - 29 September 2004, GauGau
 Added slovak translation (user contribution) - 06 November 2004, GauGau
+Added Basque language (user contribution) - 14 December 2004, GauGau
