--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -220,3 +220,4 @@ Changed coppermine version from cpg1.4.0 alpha to cpg1.4.1 beta - 12 December 20
 Added admin option "Allow unlogged users (guest or anonymous) access" - 12 December 2004, GauGau
 Added Basque language (user contribution) - 14 December 2004, GauGau
 Added ability to preview and edit ecard before sending - 15 December 2004, TranzNDance
+Added "advanced album dropdown" to "sort my pics" (picmgr.php) - 16 December 2004, GauGau
