--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -225,3 +225,6 @@ Changed script.js to recognize IE6 and FF in compliance mode for pop-up resize -
 Changed full size pic pop-up to be XHTML 1.0 Transitional Compliant - 19 December 2004, Donnoman
 Fixed pipe separator display when no keywords existed on the search page - 19 December 2004, Donnoman
 Enable BBcode for comments and ecards - 20 December 2004, TranzNDance
+Changed full size pic pop-up to remove style.css and use embedded stylesheet to assure minimal padding - 23 December 2004, Donnoman
+Changed script.js to use a different method to catch IE and FF in DOCTYPE mode, accomodate vert scroll bar of IE - 23 December 2004, Donnoman
+Added _TITLE localizations where _LNK's had been re-used. - 23 December 2004, Donnoman
