Fixed XHTML validation problem because {APPROVAL_ID} wasn't always being replaced.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1756 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -228,3 +228,4 @@ Enable BBcode for comments and ecards - 20 December 2004, TranzNDance
 Changed full size pic pop-up to remove style.css and use embedded stylesheet to assure minimal padding - 23 December 2004, Donnoman
 Changed script.js to use a different method to catch IE and FF in DOCTYPE mode, accomodate vert scroll bar of IE - 23 December 2004, Donnoman
 Added _TITLE localizations where _LNK's had been re-used. - 23 December 2004, Donnoman
+Fixed {APPROVAL_ID} causing validation issues - 23 December 2004, Donnoman
