--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -229,3 +229,6 @@ Changed full size pic pop-up to remove style.css and use embedded stylesheet to 
 Changed script.js to use a different method to catch IE and FF in DOCTYPE mode, accomodate vert scroll bar of IE - 23 December 2004, Donnoman
 Added _TITLE localizations where _LNK's had been re-used. - 23 December 2004, Donnoman
 Fixed {APPROVAL_ID} causing validation issues - 23 December 2004, Donnoman
+Removed admin menu item "Upload approval" from sight if there are no pending approvals - 27 December 2004, GauGau
+Removed admin menu item "Display Ecards" from sight if ecard logging has not been enabled - 27 December 2004, GauGau
+Changed order of admin menu items to be more intuitive - 27 December 2004, GauGau
