--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -232,3 +232,4 @@ Fixed {APPROVAL_ID} causing validation issues - 23 December 2004, Donnoman
 Removed admin menu item "Upload approval" from sight if there are no pending approvals - 27 December 2004, GauGau
 Removed admin menu item "Display Ecards" from sight if ecard logging has not been enabled - 27 December 2004, GauGau
 Changed order of admin menu items to be more intuitive - 27 December 2004, GauGau
+Added ability for admin to approve registrations - 28 December 2004, TranzNDance
