--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -233,3 +233,4 @@ Removed admin menu item "Upload approval" from sight if there are no pending app
 Removed admin menu item "Display Ecards" from sight if ecard logging has not been enabled - 27 December 2004, GauGau
 Changed order of admin menu items to be more intuitive - 27 December 2004, GauGau
 Added ability for admin to approve registrations - 28 December 2004, TranzNDance
+Updated file headers - 30 December 2004, GauGau
