--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -234,3 +234,4 @@ Removed admin menu item "Display Ecards" from sight if ecard logging has not bee
 Changed order of admin menu items to be more intuitive - 27 December 2004, GauGau
 Added ability for admin to approve registrations - 28 December 2004, TranzNDance
 Updated file headers - 30 December 2004, GauGau
+Changed default theme from "classic" to "core" - 1 January 2005, GauGau
