--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -235,3 +235,6 @@ Changed order of admin menu items to be more intuitive - 27 December 2004, GauGa
 Added ability for admin to approve registrations - 28 December 2004, TranzNDance
 Updated file headers - 30 December 2004, GauGau
 Changed default theme from "classic" to "core" - 1 January 2005, GauGau
+Added a update.in.php file for a couple of functions common with charsetmgr
+Some cosmetic changes in installer.css
+Added charsetmgr.php to convert the encoding of the whole database - 01 Jan 2005, chtito
