contents of english.php moved into english-utf-8.php, for the language fallback to work.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1902 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -240,3 +240,4 @@ Some cosmetic changes in installer.css
 Added charsetmgr.php to convert the encoding of the whole database - 01 Jan 2005, chtito
 Made utf-8 the default encoding for new installs; added a "not recommended" warnin for the 'language file' encoding
 Link to the charset manager added to update.php - 02 Jan 2005, chtito
+Moved the contents of english.php into english-utf-8.php - 02 Jan 2005, chtito
