Added Welsh language (user contribution)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1966 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -128,3 +128,4 @@ Fixed typos in French language file (user contribution) - 29 September 2004, Gau
 Added overhauled Russian translation (user contribution) - 29 September 2004, GauGau
 Added slovak translation (user contribution) - 06 November 2004, GauGau
 Added Basque language (user contribution) - 14 December 2004, GauGau
+Added Welsh language (user contribution) - 6 January 2004, GauGau
