Added buttons to searchnew.php for album properties and thumbnail view. Minor cosmetical changes.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2010 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -244,3 +244,5 @@ Moved the contents of english.php into english-utf-8.php - 02 Jan 2005, chtito
 Removed all the language-utf-8.files; the language.php files are encoded in utf-8 - 05 Jan 2005, chtito
 Added calendar icon to let users choose date on banning page - 13 January 2005, GauGau
 Added configuration option to disable the vanity block - 16 Jan 2005, Donnoman
+Added files to language fallback - 18 January 2005, GauGau
+Added buttons to searchnew.php for album properties and thumbnail view - 18 January 2005, GauGau
