Added minibrowser.php to language fallback
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2017 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -246,3 +246,4 @@ Added calendar icon to let users choose date on banning page - 13 January 2005, 
 Added configuration option to disable the vanity block - 16 Jan 2005, Donnoman
 Added files to language fallback - 18 January 2005, GauGau
 Added buttons to searchnew.php for album properties and thumbnail view - 18 January 2005, GauGau
+Added minibrowser to language fallback - 22 January 2005, GauGau
