Added coppermine bridge file (Coppermine is bridged 100% of the time) Modified bridging processes (usermgr *can* work with all bridge files) Added HTML necessary for user customizable media players Bug fixes
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2024 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -247,3 +247,7 @@ Added configuration option to disable the vanity block - 16 Jan 2005, Donnoman
 Added files to language fallback - 18 January 2005, GauGau
 Added buttons to searchnew.php for album properties and thumbnail view - 18 January 2005, GauGau
 Added minibrowser to language fallback - 22 January 2005, GauGau
+Added coppermine bridge file (Coppermine is bridged 100% of the time) - 26 January 2005, Chris
+Modified bridging processes (usermgr *can* work with all bridge files) - 26 January 2005, Chris
+Added HTML necessary for user customizable media players - 26 January 2005, Chris
+Bug fixes - 26 January 2005, Chris
