Added documentation link to admin menu
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2026 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -251,3 +251,4 @@ Added coppermine bridge file (Coppermine is bridged 100% of the time) - 26 Janua
 Modified bridging processes (usermgr *can* work with all bridge files) - 26 January 2005, Chris
 Added HTML necessary for user customizable media players - 26 January 2005, Chris
 Bug fixes - 26 January 2005, Chris
+Added documentation link to admin menu - 27 January 2005, GauGau
