Added switch to show/hide admin username under thumbnails
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2032 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -253,3 +253,4 @@ Added HTML necessary for user customizable media players - 26 January 2005, Chri
 Bug fixes - 26 January 2005, Chris
 Added documentation link to admin menu - 27 January 2005, GauGau
 Added display of the uploader under all thumbs when set in config (even random/lastviewed/lastupdated) - 30 January 2005, Donnoman
+Added switch to show/hide admin username under thumbnails - 30 January 2005, Donnoman
