--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -254,3 +254,4 @@ Bug fixes - 26 January 2005, Chris
 Added documentation link to admin menu - 27 January 2005, GauGau
 Added display of the uploader under all thumbs when set in config (even random/lastviewed/lastupdated) - 30 January 2005, Donnoman
 Added switch to show/hide admin username under thumbnails - 30 January 2005, Donnoman
+Added link to user profile and sort options in review comments page - 01 February 2005, GauGau
