--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -256,3 +256,5 @@ Added display of the uploader under all thumbs when set in config (even random/l
 Added switch to show/hide admin username under thumbnails - 30 January 2005, Donnoman
 Added link to user profile and sort options in review comments page - 01 February 2005, GauGau
 Added {pseudo} session functionality - 03 Februaru 2005, Chris
+Added IPTC import of title, caption, and keywords with upload.php and batch add - 05 February 2005, Donnoman
+Added function filter_content that filters arbitrary arrays of strings for bad_word matches and replaces them with the bad_word token (...) - 05 February 2005, Donnoman
