--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -260,4 +260,5 @@ Added IPTC import of title, caption, and keywords with upload.php and batch add 
 Added function filter_content that filters arbitrary arrays of strings for bad_word matches and replaces them with the bad_word token (...) - 05 February 2005, Donnoman
 Changed wording on the ability to hide admin uploaders to Display admin uploaders under thumbnails - 08 February 2005, Donnoman
 Changed the reliance on having regular uploaders displayed in order to turn on or off displaying admin uploaders being displayed under thumbnails - 08 February 2005, Donnoman
+Added display filename under thumbnail based on admin configuration. - 09 February 2004, Donnoman
 
