Various bug fixes in UDB integration Added ability to filter blocks and include plugin files into coppermine
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2067 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -264,3 +264,5 @@ Added display filename under thumbnail based on admin configuration. - 09 Februa
 Added display filename under thumbnail of the film strip based on admin configuration. - 09 February 2005, Donnoman
 Added admin configurable "home" button as first button in the sys_menu. - 11 February 2005, Donnoman
 Added "anonymous user posting comments can not disguise as registered user" hack (contributed by nol33t) - 15 February 2005, GauGau
+Various bug fixes in UDB integration - 17 February 2005, Chris
+Added ability to filter blocks and include plugin files into Coppermine - 17 February 2005, Chris
